tests/NormalTests/paczka1/small_fuzzy/20251554.err
Error in line 4: S614 S614 70,5
Error in line 5: S614 A811 1,1
